# CMVS_VideoDecode

./: CMakeLists.txt  README.md  avi.cpp  avi.h  jpg.cpp  jpg.h  main.cpp
lib/: avi.cpp  jpg.cpp  jpg.h
libpng/: libpng16-config
libpng/lib/debug/: libpng16.pc
